assets/sass/_custom.scss
/* ... */
#masthead .logo.scrolled,
#masthead h1.logo.scrolled {
  width: 50px!important;
  height: 50px!important;
  background-image: url('../images/nav-logo.png');
  background-repeat: no-repeat;
  background-size: 80%;
  background-position: center;
}
#masthead .logo.scrolled a {
  height: 100%!important;
}

#page-body-wrap .background-image {
  max-width: 100%!important;
  width: 100%!important;
}

.hero-block {
  max-width: $container;
  width: 100%;
  margin: 0 auto;
  @media screen and (max-width:1024px) {
    max-width: 100%;
    width: 100%;
    padding-left: 20px;
    padding-right: 20px;
  }

  @media screen and (max-width: 820px) {
    .background-image {
      height: 35vh!important;
    }
  }
}

.main-navigation ul > li:hover > a {
  opacity: 0.7;
}
.vendorList {
  width: 100%;
  float: left;
  margin-bottom: 50px;
  .flexbox {
    display: flex;
    flex-wrap: wrap;
    margin-left: -10px;
    margin-right: -10px;
  }
  .vendorInfo {
    width: 25%;
    padding: 10px;
    text-align: center;
  }
  .vendorLink {
    display: block;
    width: 100%;
    float: left;
  }
  figure {
    margin: 0 0 15px;
    width: 100%;
    float: left;
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
    position: relative;
    &:before {
      content:"";
      display:block;
      width: 100%;
      height: 100%;
      position: absolute;
      top: 0;
      left: 0;
      z-index: 5;
      box-shadow: 0 0 200px rgba(0,0,0,0.65) inset;
      transition: all ease .3s;
      opacity: 0;
    }
    img {
      width: 100%;
      height: auto;
      float: left;
    }
  }
  .vendorName {
    width: 100%;
    float: left;
    font-size: 1.5em;
    line-height: 1.3;
    text-align: center;
    margin: 0 0!important;
    padding: 0 0;
    transition: all ease .3s;
  }
  .vendorLink:hover {
    figure:before {
      opacity: 1;
    }
    .vendorName {
      font-weight: 500;
      transform: scale(1.08);
    }
  }
  @media screen and (max-width:1024px) {
    .vendorInfo {
      width: 50%;
    }
  }
  @media screen and (max-width: 500px) {
    .vendorInfo {
      width: 100%;
      margin-top: 10px;
      margin-bottom: 10px;
    }
  }
}
.wp-block-columns.intro-column {
  gap: 2em;
  @media screen and (max-width:781px) {
    flex-wrap: wrap;
    gap: 0.65em;
  }
}
.wp-block-column.title-column {
  padding-right: 3vw;
  h1 {
    margin: 0 0;
    text-align: left;
  }
  @media screen and (max-width:781px) {
    padding-right: 0;
  }
}

.wp-block-column.text-column {
  @media screen and (max-width:782px) {
    padding-left: 0;
  }
}

.wp-block-column.image-column {
  padding-right: 3vw;
  @media screen and (max-width:782px) {
    padding-left: 0;
  }
}

#page-body-wrap .peopleInfo.people,
.peopleInfo.people {
  margin-top: 20px;
  margin-bottom: 20px;
  width: 100%;
  float: left;
  .inner {
    width: 100%;
    float: left;
  }
  .person {
    display: flex;
    flex-wrap: nowrap;
    gap: 2em;
    margin-top: 1em;
    margin-bottom: 2.5em;
    @media screen and (max-width:781px) {
      flex-wrap: wrap;
      gap: 0.65em;
    }
  }
  .image {
    width: 40%;
    padding-right: 3vw;
    margin-bottom: 0!important;
    @media screen and (max-width:781px) {
      width: 100%;
      padding-right: 0;
    }
  }
  .desc {
    width: 60%;
    margin: 0 0;
    @media screen and (max-width:781px) {
      width: 100%;
    }
    h2 {
      margin-top: 0;
    }
  }
  .desc, .desc p {
    font-size: 16px;
    font-weight: 300;
    line-height: 1.6;
    color: #000;
  }

  // @media screen and (min-width: 1400px) {
  //  .image {
  //    width: 22%;
  //  }
  //  .desc {
  //    width: 78%;
  //  }
  // }

  @media screen and (max-width: 1100px) {
    .image {width:40%;}
    .desc {width:60%;}
  }
  @media screen and (max-width: 768px) {
    .image {
      width: 100%;
      padding-right: 0;
      margin-bottom: 30px;
    }
    .desc {
      width:100%;
    }
  }
}
@media screen and (min-width: 600px) {
  header#masthead.scrolled {
    height: 70px;
    padding-top: 5px;
    padding-block: 5px;
    box-shadow: 0 2px 5px rgba(0,0,0,.08);
  }
  .main-navigation ul {
    align-items: center;
    justify-content: flex-end;
    position: relative;
    left: 25px;
  }
  .main-navigation ul > li {
    padding-left: 1.25em;
    padding-right: 1.25em;
  }
  .main-navigation ul > li > a {
    font-family: 'Manrope', sans-serif;
    letter-spacing: 0.08em;
  }
}
button.menu-toggle {
  display: none!important;
}
#mobile-toggle {
  position: absolute;
  top: 20px;
  right: 5vw;
  width: 40px;
  height: 40px;
  display: none;
  align-items: center;
  justify-content: center;
  z-index: 999995;
  @media screen and (max-width: 820px) {
    right: 20px;
  }
}
#mobile-toggle span {
  display: block;
  width: 100%;
  height: 3px;
  background: #000;
  position: relative;
}
#mobile-toggle span:before,
#mobile-toggle span:after {
  content:"";
  display: block;
  width: 100%;
  height: 100%;
  position: absolute;
  left: 0;
  background: #000;
  transition: all ease .3s;
}
#mobile-toggle span:before {
  top: -11px;
}
#mobile-toggle span:after {
  top: 11px;
}
#mobile-toggle.active span {
  background-color: transparent;
}
#mobile-toggle.active span:before {
  transform: translateY(8px) rotate(45deg);
}
#mobile-toggle.active span:after {
  transform: translateY(-13px) rotate(-45deg);
}
footer.site-footer, footer.site-footer * {
  box-sizing: border-box;
}
footer.site-footer {
  float: none;
  border-top: none;
  margin: 0 0;
  padding: 30px 0;
}
footer.site-footer .footer-inner {
  max-width: $container;
  width: 100%;
  margin: 0 auto;
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  justify-content: space-between;
  flex-direction: row-reverse;
}
footer.site-footer .footer-inner .social,
footer.site-footer .footer-inner .footer-info {
  width: 50%;
  margin: 0 0;
}
footer.site-footer .footer-inner .social a span {
  display: none;
}
/* ... */

